--- a/apps/docs/src/css/custom.css
+++ b/apps/docs/src/css/custom.css
@@ -5,7 +5,37 @@
  */
 
 /* You can override the default Infima variables here. */
+
+@font-face {
+  font-family: "RO Sans";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../../static/webfonts/ROsanswebtextregular.woff") format("woff"),
+    url("../../static/webfonts/ROsanswebtextregular.ttf") format("truetype"),
+    url("../../static/webfonts/ROsanswebtextregular.eot") format("embedded-opentype");
+}
+
+@font-face {
+  font-family: "RO Sans";
+  font-weight: normal;
+  font-style: italic;
+  src: url("../../static/webfonts/ROsanswebtextitalic.woff") format("woff"),
+    url("../../static/webfonts/ROsanswebtextitalic.ttf") format("truetype"),
+    url("../../static/webfonts/ROsanswebtextitalic.eot") format("embedded-opentype");
+}
+
+@font-face {
+  font-family: "RO Sans";
+  font-weight: bold;
+  font-style: normal;
+  src: url("../../static/webfonts/ROsanswebtextbold.woff") format("woff"),
+    url("../../static/webfonts/ROsanswebtextbold.ttf") format("truetype"),
+    url("../../static/webfonts/ROsanswebtextbold.eot") format("embedded-opentype");
+}
+
+
 :root {
+  --ifm-font-family-base: "RO Sans", sans-serif;
   --ifm-color-primary: #2e8555;
   --ifm-color-primary-dark: #29784c;
   --ifm-color-primary-darker: #277148;
