--- a/apps/web/.storybook/styles.css
+++ b/apps/web/.storybook/styles.css
@@ -3,7 +3,7 @@
   font-weight: 400;
   font-style: normal;
   font-display: swap;
-  src: url('/fonts/ROsanswebtextregular.woff') format('woff');
+  src: url('../src/app/fonts/ROsanswebtextregular.woff') format('woff');
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-weight: 500;
   font-style: normal;
   font-display: swap;
-  src: url('/fonts/ROsanswebtextbold.woff') format('woff');
+  src: url('../src/app/fonts/ROsanswebtextbold.woff') format('woff');
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-weight: 400;
   font-style: italic;
   font-display: swap;
-  src: url('/fonts/ROsanswebtextitalic.woff') format('woff');
+  src: url('../src/app/fonts/ROsanswebtextitalic.woff') format('woff');
 }
 
 :root {
