fix: change fixed to absolute

--- a/apps/web/src/app/menu-desktop.module.scss
+++ b/apps/web/src/app/menu-desktop.module.scss
@@ -3,7 +3,7 @@ $animationIn: scaleIn 150ms ease;
 $animationOut: scaleOut 200ms ease forwards;
 
 .viewport {
-  position: fixed;
+  position: absolute;
   left: var(--active-item-left);
   top: var(--active-item-bottom);
   min-width: var(--active-item-width);
