--- a/apps/web/src/app/register/indInkToesl/data/regelgroepen.html
+++ b/apps/web/src/app/register/indInkToesl/data/regelgroepen.html
@@ -440,17 +440,15 @@
       <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278252" class="objecttype"
         >Persoon</a
       >
-      moet gesteld worden op "U heeft geen recht op IIT"<br />indien 
-          <a
-            href="https://open-regels.nl/Regels/Individuele%20Inkomenstoeslag/Recht%20beschrijving%202021_Regelgroep.html#687572274406222030"
-            >de Persoon</a
-          >
-          is geen
-          <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781285038" class="kenmerk"
-            >Aanvrager die woonachtig is in Utrecht</a
-          >
-        </li>
-      </ul>
+      moet gesteld worden op "U heeft geen recht op IIT"<br />indien
+      <a
+        href="https://open-regels.nl/Regels/Individuele%20Inkomenstoeslag/Recht%20beschrijving%202021_Regelgroep.html#687572274406222030"
+        >de Persoon</a
+      >
+      is geen
+      <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781285038" class="kenmerk"
+        >Aanvrager die woonachtig is in Utrecht</a
+      >
     </div>
   </div>
 </div>
@@ -460,30 +458,23 @@
   <div>
     <span class="geldig">geldig vanaf 2021 t/m 2021</span>
     <div class="spraak">
-      <span id="687572274406222336"
-        ><a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781280723" class="attribuut"
-          >De Recht beschrijving</a
-        ></span
+      <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781280723" class="attribuut"
+        >De Recht beschrijving</a
       >
-      van
-      <span id="687572274406222334"
-        >een
-        <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278252" class="objecttype"
-          >Persoon</a
-        ></span
+      van een
+      <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278252" class="objecttype"
+        >Persoon</a
       >
-      moet gesteld worden op "<span class="stringliteral">U heeft geen recht op IIT</span>"<br />indien
-      <span id="687572274406222345"
-        ><a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278375" class="attribuut"
-          >de AOW leeftijd behaald</a
-        ></span
+      moet gesteld worden op "U heeft geen recht op IIT"<br />indien
+      <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278375" class="attribuut"
+        >de AOW leeftijd behaald</a
       >
       van
       <a
         href="https://open-regels.nl/Regels/Individuele%20Inkomenstoeslag/Recht%20beschrijving%202021_Regelgroep.html#687572274406222334"
         >de Persoon</a
       >
-      gelijk is aan <span class="literal">waar</span>.
+      gelijk is aan waar
     </div>
   </div>
 </div>
@@ -493,30 +484,23 @@
   <div>
     <span class="geldig">geldig vanaf 2021 t/m 2021</span>
     <div class="spraak">
-      <span id="687572274406222363"
-        ><a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781280723" class="attribuut"
-          >De Recht beschrijving</a
-        ></span
+      <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781280723" class="attribuut"
+        >De Recht beschrijving</a
       >
-      van
-      <span id="687572274406222361"
-        >een
-        <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278252" class="objecttype"
-          >Persoon</a
-        ></span
+      van een
+      <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278252" class="objecttype"
+        >Persoon</a
       >
-      moet gesteld worden op "<span class="stringliteral">U heeft geen recht op IIT</span>"<br />indien
-      <span id="687572274406222372"
-        ><a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278608" class="attribuut"
-          >de 21 jaar of ouder maar nog niet de AOW leeftijd</a
-        ></span
+      moet gesteld worden op "U heeft geen recht op IIT"<br />indien
+      <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#7884091883781278608" class="attribuut"
+        >de 21 jaar of ouder maar nog niet de AOW leeftijd</a
       >
       van
       <a
         href="https://open-regels.nl/Regels/Individuele%20Inkomenstoeslag/Recht%20beschrijving%202021_Regelgroep.html#687572274406222361"
         >de Persoon</a
       >
-      gelijk is aan <span class="literal">onwaar</span>.
+      gelijk is aan onwaar
     </div>
   </div>
 </div>
