--- a/apps/web/src/app/register/indInkToesl/data/gegevensmodel.html
+++ b/apps/web/src/app/register/indInkToesl/data/gegevensmodel.html
@@ -9,7 +9,7 @@
         <tr>
           <td>---</td>
           <td>
-            <span class="comment">Generieke gegevens (IIT &amp; BSC)</span>
+            <span class="comment">Generieke gegevens</span>
           </td>
           <td></td>
         </tr>
@@ -49,7 +49,7 @@
         <tr>
           <td>de</td>
           <td>
-            <span id="4026378686813159700" class="kenmerk">Aanvrager die woonachtig is in Amersfoort</span>
+            <span id="4026378686813159700" class="kenmerk">Aanvrager die woonachtig is in Utrecht</span>
           </td>
           <td>
             <span>
@@ -107,24 +107,6 @@
               <b>kenmerk</b>
             </span>
           </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="7884091883781285038" class="kenmerk">Aanvrager die woonachtig is in Utrecht</span>
-          </td>
-          <td>
-            <span>
-              <b>kenmerk</b>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>---</td>
-          <td>
-            <span class="comment">IIT 2022</span>
-          </td>
-          <td></td>
         </tr>
         <tr>
           <td>de</td>
@@ -242,112 +224,6 @@
           <td>het</td>
           <td>
             <span id="7884091883781281897" class="attribuut">Uit te keren individuele inkomenstoeslag </span>
-          </td>
-          <td>
-            <span class="type">
-              <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#3837353413292357855">bedrag</a>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>---</td>
-          <td>
-            <span class="comment">BSC (Amersfoort)</span>
-          </td>
-          <td></td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="4026378686813162712" class="attribuut">vanaf 18 tot en met 20 jaar </span>
-          </td>
-          <td>
-            <span class="type">
-              <b>Boolean</b>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="4026378686813213545" class="attribuut">vanaf 21 tot de AOW-leeftijd </span>
-          </td>
-          <td>
-            <span class="type">
-              <b>Boolean</b>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="1638801257285658299" class="attribuut">Thuiswonende kinderen 0 t/m 17 jaar </span>
-          </td>
-          <td>
-            <span class="type">
-              <b>Boolean</b>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="4026378686813223564" class="attribuut">Partner jonger dan 21 </span>
-          </td>
-          <td>
-            <span class="type">
-              <b>Boolean</b>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="4026378686813217019" class="attribuut">Alleenstaande of alleenstaande ouder </span>
-          </td>
-          <td>
-            <span class="type">
-              <b>Boolean</b>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="4026378686813220358" class="attribuut">Gehuwd of Samenwonend </span>
-          </td>
-          <td>
-            <span class="type">
-              <b>Boolean</b>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="4026378686813163630" class="attribuut">Gezinsinkomen </span>
-          </td>
-          <td>
-            <span class="type">
-              <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#3837353413292357855">bedrag</a>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="4026378686813164765" class="attribuut">Gezamenlijk vermogen </span>
-          </td>
-          <td>
-            <span class="type">
-              <a href="https://open-regels.nl/Gegevens/Gegevensmodel_ObjectModel.html#3837353413292357855">bedrag</a>
-            </span>
-          </td>
-        </tr>
-        <tr>
-          <td>de</td>
-          <td>
-            <span id="4026378686813200620" class="attribuut">Uit te keren bijdrage voor sport en cultuur </span>
           </td>
           <td>
             <span class="type">
