--- a/apps/web/src/app/lab/berekenrechtenhoogtezorg.html
+++ b/apps/web/src/app/lab/berekenrechtenhoogtezorg.html
@@ -19,10 +19,10 @@
     <pre id="output"></pre>
 
     <!-- Footer notice with link -->
-    <footer style="margin-top: 40px; padding: 10px; background-color: #f4f4f4; text-align: center;">
+    <footer style="margin-top: 40px; padding: 10px; background-color: #f4f4f4; text-align: center">
       <p>
-        This is a hard coded example, please read the 
-        <a href="https://regels.overheid.nl/docs/lab/zorgtoeslag" target="_blank">documentation page</a> 
+        This is a hard coded example, please read the
+        <a href="https://regels.overheid.nl/docs/lab/zorgtoeslag" target="_blank">documentation page</a>
         for further explanation.
       </p>
     </footer>
